--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8088
 
 spring.main.allow-bean-definition-overriding=true
 spring.thymeleaf.prefix=classpath:/static/
-import.endpoint.user = user10
-import.endpoint.password=KYV54B
+import.endpoint.user=user10
+import.endpoind.password=KYV54B
 
 
