--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.main.allow-bean-definition-overriding=true
 spring.thymeleaf.prefix=classpath:/static/
 import.endpoint.user=user10
 import.endpoind.password=KYV54B
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
