--- a/pom.xml
+++ b/pom.xml
@@ -181,10 +181,10 @@
 			<version>1.9.1</version>
 		</dependency>
 		
-		 <dependency>
+		 <!--  <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
-		</dependency>
+		</dependency> -->
 		
 				
 	</dependencies>
