--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,13 @@ application.jwt.tokenPrefix=Bearer
 application.jwt.tokenExpirationAfterDays=14
 spring.thymeleaf.prefix=classpath:/static/
 
+spring.jpa.show-sql = false
+
+mysql.db.username=root
+mysql.db.password=Password123
+oracle.db.username=SYSTEM
+oracle.db.password=Secret.Password1987
+
+
 
 
