--- a/pom.xml
+++ b/pom.xml
@@ -124,12 +124,12 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc</artifactId>
 			<version>6</version>
-		</dependency> 
+		</dependency>
 
 		<dependency>
 			<groupId>p6spy</groupId>
@@ -175,6 +175,11 @@
 			<version>1.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+
 		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId> 
 			</dependency> -->
 
@@ -204,7 +209,7 @@
 			<id>codelds</id>
 			<url>https://code.lds.org/nexus/content/groups/main-repo</url>
 		</repository>
-	</repositories> 
+	</repositories>
 
 
 </project>
