--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,12 @@
 
 	<dependencies>
 
-
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+        <dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 		</dependency>
