basic ftp connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,11 @@ mysql.db.password=Password123
 oracle.db.username=SYSTEM
 oracle.db.password=Secret.Password1987
 
+host.server.url = https://archive.org/details
+connection.server.port = 21
+connection.server.user = Farrusco1
+connection.server.pass = Farrusco1975
+
 
 
 
