--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,16 @@
 			<artifactId>spring-security-oauth2-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
