--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,18 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.djdch.log4j</groupId>
+			<artifactId>log4j-staticshutdown</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		
+		<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
 	</dependencies>
 
 	<build>
