--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,11 @@
             <artifactId>log4j-core</artifactId>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 
 	</dependencies>
 
