Add logging employee logging files

--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,12 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.7</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.thymeleaf</groupId>
+             <artifactId>thymeleaf-spring4</artifactId>
+            <version>3.0.0.RELEASE</version>
+        </dependency>
 
 	</dependencies>
 
