--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+keystore.location = C:/Users/David Victor/KeyStore.jks
+ssl.password = Mercedes123
+trustore.location = C:/Users/David Victor/Downloads/truststore.jks
+
 spring.main.allow-bean-definition-overriding=true
 import.endpoint.user=user10
 import.endpoind.password=KYV54B
