Move to Oracle 11G Express

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 keystore.location = C:/Users/David Victor/KeyStore.jks
-ssl.password = Mercedes123
+ssl.password = Stalingrad1943
 trustore.location = C:/Users/David Victor/Downloads/truststore.jks
 
 spring.main.allow-bean-definition-overriding=true
@@ -16,7 +16,7 @@ spring.jpa.show-sql = false
 mysql.db.username=root
 mysql.db.password=Password123
 oracle.db.username=SYSTEM
-oracle.db.password=Secret.Password1987
+oracle.db.password=Secret.Password87
 
 host.server.url = https://archive.org/details
 connection.server.port = 21
