Start Logging Bean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+server.port=8088
+
+spring.application.name=Erp Application
+
 keystore.location = C:/Users/David Victor/KeyStore.jks
 ssl.password = Stalingrad1943
 trustore.location = C:/Users/David Victor/Downloads/truststore.jks
