SSL Trust Store Type

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=Erp Application
 
 keystore.location = C:/Users/David Victor/KeyStore.jks
 ssl.password = Stalingrad1943
+server.ssl.trust-store-type=PKCS12
 trustore.location = C:/Users/David Victor/Downloads/truststore.jks
 
 spring.main.allow-bean-definition-overriding=true
