--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,17 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		
+		<dependency>
+                     <groupId>com.jolbox</groupId>
+                     <artifactId>bonecp</artifactId>
+                     <version>0.8.0.RELEASE</version>
+               </dependency>
 
 	</dependencies>
 
