--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,11 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
+		</dependency>
+		
+		<dependency>
                      <groupId>com.jolbox</groupId>
                      <artifactId>bonecp</artifactId>
                      <version>0.8.0.RELEASE</version>
