Basic batch job

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8088
 
 spring.application.name=Erp Application
 
+input=D:/DestinationFolder/Document.txt
+
 keystore.location = C:/Users/David Victor/KeyStore.jks
 ssl.password = Stalingrad1943
 server.ssl.trust-store-type=PKCS12
